UI: fix "Other Sign in" overlapping window
GITLAB-432 (GITLAB-381)

--- a/app/assets/stylesheets/themes/ui_bb.scss
+++ b/app/assets/stylesheets/themes/ui_bb.scss
@@ -455,7 +455,7 @@ img.small { width: 80px; }
   }
 
   hr {
-    display: hidden;  
+    display: none;  
   }
 
 }
