--- a/app/assets/stylesheets/themes/ui_bb/login.scss
+++ b/app/assets/stylesheets/themes/ui_bb/login.scss
@@ -26,16 +26,12 @@
   /*max-height: 1000px;*/
 
   z-index:1;
-
   
 }
 
 .login-box{
   width: 274px;
-  /*position: relative;*/
-  /*@include border-radius(20px);*/
   margin: auto auto 10px;
-  /*padding: 40px 30px 50px;*/
   background-color: $white_overlay;
   box-shadow: 0px 0px 4px rgba(64, 64, 64, 0.3);
 
@@ -105,5 +101,15 @@
   margin-bottom:0px;
 }
 
-.login-box a.forgot{float: right; padding-top: 6px}
+.login-box a.forgot{
+  float: right; padding-top: 6px
+}
+
+#new_user.login-box{
+  background: rgb(227, 238, 253);
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+
+
 }
